# OpenMinds

./: index.html  package-lock.json  package.json  package.json.bak  svelte.config.ts  tailwind.config.js  tsconfig.json
backend/: AUTOML_README.md  Cargo.toml
backend/migrations/: 20240101000000_initial.sql  20240714145100_add_experiments_table.sql
backend/python/: requirements.txt  train.py
backend/python/automl/: service.py
backend/src/: automl.rs  error.rs  main.rs  models.rs  python.rs
backend/src/ai/: copilot.rs  model_builder.rs
backend/src/api/: ai.rs  automl.rs  collaboration.rs  datasets.rs  environment.rs  experiments.rs  mod.rs  model_builder.rs  notebooks.rs  profiler.rs
backend/src/collaboration/: error.rs  handler.rs  message.rs  mod.rs  ot.rs  ot_handler.rs  session.rs  state.rs
backend/src/data/: mod.rs  profiler.rs
backend/src/runtime/: environment.rs  mod.rs
src/: App.svelte  app.css  app.d.ts
src/lib/components/: MainContent.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/components/command-palette/: CommandPalette.svelte
src/lib/components/editor/: CodeEditor.svelte  MonacoEditor.svelte
src/lib/components/markdown/: Layout.svelte
src/lib/components/notebook/: CellOutput.svelte  MarkdownRenderer.svelte  NotebookCell.svelte  NotebookRenderer.svelte
src/lib/components/panels/: ModelConfigPanel.svelte
src/lib/components/styles/: markdown.css
src/lib/components/ui/: Toast.svelte
src/lib/components/upload/: FileUpload.svelte
src/lib/components/views/: AICopilotView.svelte  AutoMLView.svelte  DataProfilerView.svelte  DatasetView.svelte  DeploymentView.svelte  ExperimentView.svelte  ModelView.svelte  NotebookView.svelte  RuntimeView.svelte  SettingsView.svelte  TerminalView.svelte  VersionControlView.svelte  VisualBuilderView.svelte
src/lib/components/visualization/: DataVisualization.svelte
src/lib/stores/: cells.ts  index.ts  notebooks.ts  toast.ts  ui.ts
