[package]
name = "openmind-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = { version = "0.5.0", features = ["cors"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-openai = { version = "0.16", features = ["default"] }
polars = { version = "0.35", features = ["lazy", "json", "temporal", "random", "strings", "object"] }
sys-info = "0.9.1"
num_cpus = "1.16.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-sync = { version = "0.1", features = ["rt-multi-thread"] }
serde_yaml = "0.9"
base64 = "0.21"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
serde_repr = "0.1"
wasmtime = { version = "8.0", features = ["async"] }
wasmtime-wasi = { version = "8.0", features = ["async"] }
wasmtime-wasi-http = { version = "8.0", features = ["sync"] }
wasmtime-component-macro = "8.0"
wasmtime-component-util = "8.0"
wasmtime-wit-bindgen = { version = "8.0", features = ["async"] }
wasm-bridge = { version = "0.1", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
rand = "0.8"
ring = "0.17"
quinn = "0.10"
quinn-proto = "0.10"
quinn-udp = "0.4"
tungstenite = { version = "0.20", features = ["native-tls"] }
